--- a/src/App.scss
+++ b/src/App.scss
@@ -21,5 +21,14 @@ a{
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    
+    position: relative;
+}
+body{
+    font-family: "IBM Plex Sans", ProximaNova, Arial, Tahoma, PingFangSC, sans-serif;
+    font-size: 14px;
+    color: rgb(22, 24, 35);
+    background-color: rgb(255, 255, 255);
+    overscroll-behavior: contain;
+    direction: ltr;
+    -webkit-font-smoothing: antialiased;
 }
