--- a/src/access/style/responsiveMedium.scss
+++ b/src/access/style/responsiveMedium.scss
@@ -9,9 +9,10 @@
         border-right: 1px solid rgba(22, 24, 35, 0.12);
         box-shadow: 0px 2px 8px rgb(0 0 0 / 6%);
         padding: 12px 8px;
+        top: 60px;
         &:hover{
             &::-webkit-scrollbar-thumb {
-                background: white;
+                background: rgba(212, 212, 212, 0.5);
             }
         }
         .body__left__pages .text{
