--- a/src/access/style/ForYou.scss
+++ b/src/access/style/ForYou.scss
@@ -87,6 +87,8 @@
         font-size: 16px;
         line-height: 22px;
         display: flex;
+        flex-wrap: wrap;
+        width: 450px;
         span{
             font-weight: 400;
             margin-right: 8px;
