--- a/src/access/style/body.scss
+++ b/src/access/style/body.scss
@@ -44,9 +44,9 @@ a{
     top: 80px;
     bottom: 0;
     width: 356px;
-    background: rgba(255, 255, 255, 1.0);
+    background: rgb(255, 255, 255);
     position: fixed;
-    z-index: 99;
+    z-index: 99999;
     padding-right: 8px;
     -webkit-overflow-scrolling: touch;
     &:hover{
@@ -208,6 +208,7 @@ a{
     font-weight: 600;
     font-size: 14px;
     line-height: 20px;
+    width: 80px;
 }
 .dataProposes{
     position: relative;
@@ -224,7 +225,8 @@ a{
     background: rgb(255, 255, 255);
     box-shadow: rgb(0 0 0 / 12%) 0px 4px 16px;
     border-radius: 8px;
-    top: 50px; 
+    top: 20px; 
+    left: 25px;
     z-index: 2000; 
      
     display: none; 
@@ -235,8 +237,8 @@ a{
     }
     img{
         border-radius: 50%;
-        width: 44px;
-        height: 44px;
+        width: 40px;
+        height: 40px;
         margin-right: 12px;
         cursor: pointer;
     }
@@ -253,17 +255,22 @@ a{
         color:rgba(22, 24, 35, 0.75)
     }
 }
+.data__review__reposive__medium{
+    position: fixed;
+    top: 220px;
+    left: 40px;
+    z-index: 9999;
+}
 .data__review-btn{
     border-radius: 4px;
     border: none;
     color: rgb(255, 255, 255);
     background-color: rgb(254, 44, 85);
     min-width: 106px;
-    min-height: 28px;
+    height: 34px;
     font-size: 16px;
     line-height: 22px;
     font-weight: 600;
-    font-family: ProximaNova, PingFangSC, sans-serif;
     display: flex;
     position: relative;
     -webkit-box-align: center;
@@ -272,6 +279,7 @@ a{
     justify-content: center;
     padding: 6px 8px;
     cursor: pointer;
+    box-sizing: border-box;
 }
 .followed{
     border-width: 1px;
@@ -284,4 +292,7 @@ a{
 
 .active{
     display: block;
+}
+video{
+    border-radius: 10px;
 }
