--- a/src/access/style/responsiveMedium.scss
+++ b/src/access/style/responsiveMedium.scss
@@ -6,7 +6,7 @@
         padding-top: 0px;
     }
     .body__left{
-        width: 55px;
+        width: 55px !important;
         border-radius: 0px;
         background-color: rgba(0, 0, 0, 0);
         border-right: 1px solid rgba(22, 24, 35, 0.12);
