--- a/src/access/style/body.scss
+++ b/src/access/style/body.scss
@@ -129,8 +129,9 @@ a{
 
         }
     }
+}.body__left__pages-list-item:hover{
+    background-color: rgba(219, 219, 219, 0.198);
 }
-
 .pages-active{
     a{
         color: RGB(254, 43, 84);
