--- a/src/access/style/header.scss
+++ b/src/access/style/header.scss
@@ -23,7 +23,8 @@
     width: 100%;
     text-align: center;
     vertical-align: middle;
-    line-height: 60px;
+    align-items: center;
+    height: 60px;
     &__left{
 
         &-logo{
