--- a/src/access/style/Linktoshare.scss
+++ b/src/access/style/Linktoshare.scss
@@ -1,5 +1,4 @@
 .share__box{
-    // display: flex;
     flex-direction: column;
     position: absolute;
     font-weight: 600;
@@ -18,7 +17,7 @@
     z-index: 1;
     bottom: 90px;
     left: -20px;
-    display: none;
+    // display: none;
     &:hover{
         display: block;
     }
